Kubernetes/NGINXIngress-FlaskApp-MongoDB/manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    role: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
