Kubernetes/NGINXIngress-FlaskApp-MongoDB/manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application
        image: ruslan1serdiuk/rserdiuk_application:nginxingress-flaskapp-mongodb-web
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
          name: http-web-svc
        readinessProbe:
          httpGet:
            path: /healthx
            port: http-web-svc
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-web-svc
          initialDelaySeconds: 10
          periodSeconds: 3
      imagePullSecrets:
      - name: client
---
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
  type: ClusterIP
