Kubernetes/NGINXIngress-FlaskApp-MongoDB/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
   - host: rserdiuk.application.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: application
                port: 
                  number: 80
